--- a/package.json
+++ b/package.json
@@ -16,6 +16,18 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+        "@ckeditor/ckeditor5-dev-utils": "^12.0.6",
+        "@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.6",
+        "@ckeditor/ckeditor5-theme-lark": "^16.0.0",
+        "postcss-loader": "^3.0.0",
+        "raw-loader": "^3.1.0",
+        "style-loader": "^1.1.2",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
     }
 }
